zokrates_cli/examples/compile_errors/struct_member_type_mismatch_u8.zok
struct Foo {
    u8[2] values;
}

struct Bar {
    Foo foo;
    u8 bar;
}

def main() {
    Bar s = Bar {
        foo: Foo { values: [1] }, // notice the size mismatch here
        bar: 0,
    };
    u8 b = s.bar;
    return;
}
